[gd_scene load_steps=9 format=3 uid="uid://dxkfheoedlyrb"]

[ext_resource type="Script" path="res://Objects/StripTypes/trainTracks.gd" id="1_qcm4l"]
[ext_resource type="PackedScene" uid="uid://cbryhvua33vf7" path="res://Objects/Vehicle/train.tscn" id="2_d7d48"]
[ext_resource type="PackedScene" uid="uid://bphovdf3rtmkp" path="res://Objects/MeshScenes/track.tscn" id="3_xu27f"]
[ext_resource type="PackedScene" uid="uid://bmia717s3u73t" path="res://Objects/MeshScenes/MapStuff/entrance_and_exit_component.tscn" id="4_oal83"]
[ext_resource type="PackedScene" uid="uid://c7yvf1hywd1jg" path="res://Objects/MeshScenes/MapStuff/map_floor.tscn" id="5_42sk1"]
[ext_resource type="Material" uid="uid://boyq8adjheroc" path="res://Objects/Materials/ground.tres" id="7_1noty"]
[ext_resource type="PackedScene" uid="uid://cc2mvth3somss" path="res://Objects/MeshScenes/MapStuff/map_walls.tscn" id="7_ma13n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_uap7l"]
size = Vector3(1, 10, 0.8)

[node name="TrainTracks" type="Node3D" node_paths=PackedStringArray("trainSpawningTimer", "trainSpawningPoint", "trainRemovalArea", "trackSpawningPoint")]
script = ExtResource("1_qcm4l")
trainScene = ExtResource("2_d7d48")
trainTracksScene = ExtResource("3_xu27f")
trainSpawningTimer = NodePath("trainSpawningTimer")
trainSpawningPoint = NodePath("trainSpawningPoint")
trainRemovalArea = NodePath("trainRemovalArea")
trackSpawningPoint = NodePath("trackSpawningPoint")

[node name="EntranceAndExitComponent" parent="." instance=ExtResource("4_oal83")]

[node name="FloorMesh" parent="." instance=ExtResource("5_42sk1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.04951, 0)
material_override = ExtResource("7_1noty")
size = Vector3(15, 2.39902, 1)

[node name="CollisionRoad" parent="." instance=ExtResource("7_ma13n")]

[node name="trainSpawningPoint" type="Node3D" parent="."]

[node name="trackSpawningPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.215914, 0)

[node name="trainSpawningTimer" type="Timer" parent="."]

[node name="trainRemovalArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="trainRemovalArea"]
shape = SubResource("BoxShape3D_uap7l")

[connection signal="timeout" from="trainSpawningTimer" to="." method="trainSpawningTimerEnded"]
[connection signal="body_entered" from="trainRemovalArea" to="." method="trainRemovalAreaEntered"]
